--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "generator-angular",
-  "version": "0.11.0",
-  "description": "Yeoman generator for AngularJS",
+  "name": "generator-angular-doner",
+  "version": "0.0.1",
+  "description": "Yeoman generator for AngularJS - Doner Fork",
   "keywords": [
     "yeoman-generator",
     "scaffold",
@@ -11,7 +11,7 @@
     "app",
     "angular"
   ],
-  "author": "The Yeoman Team",
+  "author": "Doner Development",
   "main": "app/index.js",
   "files": [
     "app",
@@ -32,7 +32,11 @@
     "script-base.js",
     "util.js"
   ],
-  "repository": "yeoman/generator-angular",
+  "repository": {
+      "type": "git",
+      "url": "https://github.com/donerdu/generator-angular.git"
+
+    },
   "scripts": {
     "test": "mocha"
   },
